--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,11 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "anyio>=4.12.1",
     "fastmcp>=0.9.0",
     "httpx>=0.27.0",
     "langchain>=1.2.6",
     "langchain-mcp-adapters>=0.2.1",
     "langchain-openai>=1.1.7",
-    "langgraph>=1.0.6",
+    "openai>=2.15.0",
 ]
