--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,12 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "autogen>=0.10.5",
     "fastmcp>=0.9.0",
     "httpx>=0.27.0",
     "langchain>=1.2.6",
     "langchain-mcp-adapters>=0.2.1",
     "langchain-openai>=1.1.7",
     "openai>=2.15.0",
+    "semantic-kernel>=1.36.0",
 ]
