--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,10 @@ dependencies = [
     "fastmcp>=0.9.0",
     "httpx>=0.27.0",
     "langchain>=1.2.6",
+    "langchain-text-splitters>=0.3.0",
     "langchain-mcp-adapters>=0.2.1",
     "langchain-openai>=1.1.7",
     "openai>=2.15.0",
     "semantic-kernel>=1.36.0",
+    "langchain-chroma>=1.1.0",
 ]
